fixed issue on mobile with three best select

--- a/source/scss/components/_three-best.scss
+++ b/source/scss/components/_three-best.scss
@@ -11,24 +11,22 @@
 		@include container(1063px);
 		@include font-size(24px);
 		margin-bottom: 0.5em;
-		height: 47px;
 
 		@include media-query(note-and-up){
 			padding: 0;
+			height: 47px;
 		}
 		
 		* {
 			height: 100% !important;
-			line-height: 47px;
+
+			@include media-query(note-and-up){
+				line-height: 47px;
+			}
 		}
 
 		h2 {
 			margin-right: 0.5em;
-			// line-height: 47px;
-		}
-
-		select {
-			// line-height: 47px;
 		}
 	}
 }
